src/objects/Competitor_Product_Opp_Association__c.object
<CustomObject>
    <description>Junction Object between Competitor Products and Opportunities</description>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <formula>Competitor_Product__r.Firm__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product</label>
        <referenceTo>Competitor_Product__c</referenceTo>
        <relationshipName>Competitor_Product_Opp_Associatis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Competitor_Product_Opp_Associatis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Competitor_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Competitor Product to Oppty Junction</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Product to Oppty Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>